# SySYCompiler

./: CMakeLists.txt  README.md
include/: ast.hpp  ir.hpp
include/AST/: ast.hpp
include/IR/: Argument.hpp  BasicBlock.hpp  Cosnt.hpp  Function.hpp  GlobalVar.hpp  Instruction.hpp  Module.hpp  Type.hpp  User.hpp  Value.hpp
src/: main.cpp
src/AST/: AstNode.cpp  BlockNode.cpp  CallFuncNode.cpp  DeclNode.cpp  DefListNode.cpp  DefNode.cpp  DimListNode.cpp  DimNode.cpp  ExpNode.cpp  FuncDefNode.cpp  InitValListNode.cpp  InitValNode.cpp  LValNode.cpp  NumberNode.cpp  OpNode.cpp  PrimaryExpNode.cpp  StmtNode.cpp  TypeNode.cpp
src/Front/: lexer.l  parser.y
src/IR/: ir.cpp
test/: test  test.c  test.ll
